assets/css/style.css
/* ... */
.review--heading h2 {
    margin: auto;
    margin-bottom: 24px;
    width: max-content;
    padding: 0px 9px 3px 9px;
    border-bottom: 1px solid #565661;
}

.pic--frame p {
    margin-top: auto;
    margin-bottom: auto;
    color: #d3d3d3;
    padding: 6px;
}

.pic--frame span {
    text-transform: uppercase;
    border-bottom: 1px solid #565661;
}

/*------------------------------------contact form*/
.contact--form {
    padding: 36px 9px 0 9px;
    margin: auto;
    max-width: 600px;
    color: #B8B8B8;
}

.contact--form h2 {
    width: max-content;
    margin: auto;
    margin-bottom: 24px;
    border-bottom: 1px solid #565661;
    padding: 0px 9px 3px 9px;
}

/* Contact--form--help--from--here--https://www.w3schools.com/css/tryit.asp?filename=trycss_forms--*/

.contact--form input[type=text],
.contact--form input[type=email],
.contact--form textarea {
    width: 100%;
    display: inline-block;
    background-color: #303036;
    border: 1px solid #565661;
    color: #CCCCCC;
    border-radius: 12px;
    margin-bottom: 12px;
    padding: 12px 20px;
    box-sizing: border-box;
    transition: .1s;
    box-shadow: 0 0 4px 4px rgba(255, 255, 255, 0.06);
}

input[type=text]:focus,
input[type=email]:focus,
textarea:focus {
    background-color: #3d3d44;
    color: #CCCCCC;
    outline: none;
}

input[type=text]:hover,
input[type=email]:hover,
textarea:hover {
    background-color: #3d3d44;
}

/*---auto--complere--background---color--CSS--VALIDATION--ERROR--https://stackoverflow.com/questions/2781549
/removing-input-background-colour-for-chrome-autocomplete---*/

.contact--form input::-webkit-input-placeholder,
.contact--form textarea::-webkit-input-placeholder {
    color: #CCCCCC;
}

input:-webkit-autofill {
    -webkit-text-fill-color: rgb(255, 255, 255);
    -webkit-background-clip: text;
}

/* ---------END Autocomplete--color------- */

input[type=submit] {
    width: 100%;
    background-color: #6d7a52;
    color: #CCCCCC;
    padding: 12px;
    border: none;
    border-radius: 12px;
    cursor: pointer;
    transition: .1s;
}

input[type=submit]:hover {
    background-color: #78875a;
}


.Contact--form textarea {
    resize: none;
    height: 133.3px;
}

/* -----------------------------------------footer-----------------------------*/
.footer--container {
    width: inherit;
    min-height: 200px;
    background-color: #A96260;
}

.socia--footer--block {
    width: 250px;
    margin: auto;
    margin-top: 36px;
    text-align: center;
    background-color: #A96260;
    border-radius: 12px 12px 0 0;
    padding-top: 6px;
}

.border-- {
    width: fit-content;
    margin: auto;
    padding-bottom: 6px;
    border-bottom: 1px solid #b36865;
}



.footer--container--content {
    margin: auto;
    max-width: 1280px;
}

.footer--container--content ul {
    padding: 0 9px 9px 9px;
    margin: auto;
}

.footer--container--content li {
    margin: auto;
    line-height: 50px;
    border-bottom: 1px solid #b36865;
    max-width: 600px;
    color: #d3d3d3;
    list-style: none;
    letter-spacing: 1.5px;
    font-size: .8em;
}

.footer--container--content p {
    max-width: 260px;
    text-align: right;
    margin: auto;
}


.footer--container--content span {
    text-align: left;
    float: left;
    width: 45px;
    font-weight: bold;
}


footer ul a {
    text-decoration: none;
    color: #ccc;
    transition: .2s;
}

footer ul a:hover {
    padding-right: 12px;
    color: #b3b3b3;
}


footer h4 {
    padding: 9px 9px 0 9px;
    margin: auto;
    margin-bottom: 9px;
    width: max-content;
    color: #c0c0c0;
    border-bottom: 1px solid #b36865;
}

.copyright {
    text-align: center;
    padding: 0 9px 9px 9px;

}

.copyright p {
    font-weight: bold;
    letter-spacing: 1.5px;
    margin-bottom: 0;
    font-size: .8rem;
}

.icon {
    line-height: 2rem;
    text-align: center;
}

.icon i {
    font-size: 2rem;
    color: #c0c0c0;
}

.map-icon {
    padding-bottom: 9px;
}

.map-outer {
    padding: 0;
    margin: auto;
}

.map {
    padding: 0 9px 9px 9px;
    margin: auto;
    height: 160px;
    max-width: 1000px;
}

.map iframe {
    width: 100%;
    height: 100%;
}

/*--------------------------Media---screen-----------------------------*/
@media screen and (max-width: 1550px) {

    .main--heading {
        padding: 6% 0;
    }
    .main--heading h3 {
        padding: 3% 0;
    }
}

@media screen and (max-width: 1103px) {

    .welcome .about-p,
    .occasion .about-p {
        min-height: 100px;
    }   
    .welcome,
    .we-choose,
    .occasion {
        padding-top: 9px;
        max-width: 600px;
        flex-basis: 200px;
    }
    .welcome {
        order: 1;
    }
    .we-choose {
        margin: 0 260px;
        order: 3;
    }
    .occasion {
        order: 2;
    }

}

@media screen and (max-width: 991.5px) {
    .nav--link--block {
        width: 100%;
        margin: 12px;
        text-align: right;
    }
}


@media screen and (max-width: 937px) {
    .about--content {
        flex-direction: column;
    }
    .we-choose {
        order: 2;
        margin: 0 9px;
        align-self: flex-end;
    }

    .welcome .about-p,
    .occasion .about-p {
        min-height: auto;
    }
    
}

@media screen and (max-width: 767px) {

    /* ---------------------------Home-----page------- */
    .home--content {
        padding-left: 0px;
        padding-right: 0px;
    }
    .main--heading h3 {
        text-align: center;
        font-size: 9.38vw;
    }
    .main--heading h1 {
        margin-left: 0;
        font-size: 18.2vw;
    }

    .creative--div {
        border-bottom: 1px solid #565661;
    }
    .creative--solutions {
        padding: 0 0 12px 0;
        margin: auto;
        border: none;
    }

    .about {
        display: none;
    }

    /* -------------------review-------------- */
    .review--container {
        max-width: 600px;
        margin: auto;
        border-bottom: 1px solid #565661;
    }
}
/* ... */

